Fix the TLS errors from Travis CI
See: https://github.com/gjtorikian/html-proofer/wiki/Using-HTMLProofer-From-Ruby-and-Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: ruby
 rvm:
 - 2.3.3
+addons:
+  apt:
+    packages:
+    - libcurl4-openssl-dev # Required to avoid TLS errors
 
 script:
   - set -e # halt script on error
