--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+  - ASSET_HOST_URL="https://github.githubassets.com"
 
 script:
   - set -e # halt script on error
